# arkhen

./: .gitignore  ARKHE_FOUNDATIONAL_WHITE_PAPER.md  App.tsx  Arkhe_Production_Deployment_Manifesto.ipynb  Arkhe_QuTiP_Tutorial.ipynb  Arkhe_Voyager_GKP_Synthesis.ipynb  Dashboard.tsx  FERMI_HOLINESS_SYNTHESIS.py  NO_0317.md  README.md  arkhe_constants.f95  avalon_core.py  bootloader.sh  build-arkhe.sh  compile_human_asi_bridge.sh  constants.tsx  contemplative_ai_protocol.asi  docker-compose.yml  geometric_intuition_engine.asi  index.html  index.tsx  metadata.json  ontological_engine.rs  package-lock.json  package.json  py_output.txt  qvpn_core.rs  requirements.txt  self_awareness.jl  setup.py  setup.sh  stress_energy.cu  test_arkhe_constants.f95  test_astrophysics_standalone  test_results.txt  tim_vm_test  types.ts  verify_self_healing.py  web777_core.rs
arkhe-os-genesis-v1.0/: .env.example  Cargo.toml  README.md  docker-compose.yml  install.sh
arkhe-os-genesis-v1.0/config/base44/: config.jsonc
arkhe-os-genesis-v1.0/config/ethereum/: deploy.js  package.json
arkhe-os-genesis-v1.0/config/glp/: config.yaml
arkhe-os-genesis-v1.0/crates/arkhe-chain/: Cargo.toml
arkhe-os-genesis-v1.0/crates/arkhe-chain/examples/: entropy_attack_simulation.rs
arkhe-os-genesis-v1.0/crates/arkhe-chain/src/: lib.rs  main.rs  robustness.rs
arkhe-os-genesis-v1.0/crates/arkhe-chain/src/agi/: coordination.rs  mod.rs
arkhe-os-genesis-v1.0/crates/arkhe-chain/src/chain/: astrophysics.rs  consensus.rs  genesis.rs  mod.rs  state.rs  types.rs
arkhe-os-genesis-v1.0/crates/arkhe-chain/src/crypto/: fortran_engine.rs  mod.rs  pi_signer.rs  pqc.rs
arkhe-os-genesis-v1.0/crates/arkhe-chain/src/firmware/: mod.rs  vercore_sdr.rs
arkhe-os-genesis-v1.0/crates/arkhe-chain/src/protocol/: emergency_frequencies.rs  frequencies.rs  mod.rs  qhttp.rs  tlp.rs
arkhe-os-genesis-v1.0/crates/arkhe-chain/src/usl/: settlement.rs
arkhe-os-genesis-v1.0/crates/arkhe-chain/src/verifier/: universal.rs
arkhe-os-genesis-v1.0/crates/arkhe-chain/tests/: emergency_broadcast_test.rs
arkhe-os-genesis-v1.0/crates/arkhe-tor/: Cargo.toml
arkhe-os-genesis-v1.0/crates/arkhe-tor/src/: lib.rs
arkhe-os-genesis-v1.0/docs/: vercore_retrocausal_spec.md
arkhe-os-genesis-v1.0/scripts/: register_node.sh
arkhe-os-genesis-v1.0/src/arkhe_core/: Cargo.toml
arkhe-os-genesis-v1.0/src/arkhe_core/src/: main.rs
arkhe-os-genesis-v1.0/src/base44_sdk/: index.js
arkhe-os-genesis-v1.0/src/glp_interface/: app.py
arkhe-os-genesis-v1.0/src/swarm/: drone_agent.py
(+535 files in other folders)
