[workspace]
resolver = "2"
members = [
    "src/arkhe_core",
    "crates/arkhe-tor",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Database (PostgreSQL only)
sqlx = { version = "0.7", default-features = false, features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "migrate",
    "uuid",
    "chrono",
] }

# Runtime and common dependencies
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"

# Internal crates
arkhe-core = { path = "src/arkhe_core" }
arkhe-tor = { path = "crates/arkhe-tor" }
