[package]
name = "arkhe-chain"
version = "3.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
anyhow = "1"
rand = "0.8"
log = "0.4"
hex = "0.4"
clap = { version = "4", features = ["derive"] }
pqcrypto-dilithium = { version = "0.5", features = ["serialization"] }
pqcrypto-traits = "0.3"
zeroize = { version = "1.7", features = ["derive"] }
ark-ff = "0.4"
ark-ec = "0.4"
ark-bn254 = "0.4"
ark-groth16 = "0.4"
ark-relations = "0.4"
ark-serialize = "0.4"
tract-onnx = "0.21"
ndarray = "0.15"
libp2p = { version = "0.53", features = ["tcp", "noise", "yamux", "gossipsub", "kad"] }
