[package]
name = "arkhe-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
actix-web = "4"
serde.workspace = true
serde_json.workspace = true
env_logger = "0.10"
log = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
tokio.workspace = true
reqwest = "0.11"
sqlx.workspace = true
